use 6 edition code